[aliases]
test=pytest

[metadata]
name = xport
version = 3.5.1
author = Michael Selik
author-email = michael.selik@gmail.com
home-page = https://github.com/selik/xport
description = SAS XPORT file reader
long-description = file: README.rst, CHANGELOG.rst
platform = any
license = MIT
keywords =
    sas
    xport
    xpt
    cport
    sas7bdat
classifiers =
    Development Status :: 4 - Beta
    Topic :: Text Processing
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
test_suite = test
setup_requires =
    docutils
    setuptools >= 38.3
    pytest-runner
    pygments
tests_require =
    pytest
install_requires =
    click>=7.1.1
    pandas>=1.3.5,<1.4
    pyyaml

include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    xport = xport.cli:cli

# [tool:pytest]
# Some features of pytest.ini are currently incompatible with setup.cfg
# https://github.com/pytest-dev/pytest/issues/3062

[options.extras_require]
dev =
    doc8
    flake8
    flake8-docstrings
    flake8-tidy-imports
    ipython
    isort
    jupyter
    jupyterlab
    pandoc
    pytest
    sphinx
    twine
    yapf

[check]
metadata = true
restructuredtext = true
strict = true

[yapf]
based_on_style = facebook
align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 99
dedent_closing_brackets = true
split_before_arithmetic_operator = true
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = true
split_before_logical_operator = true

[isort]
line_length = 80
known_first_party = xport
multi_line_output = 3
include_trailing_comma = true
order_by_type = true
import_heading_stdlib = Standard Library
import_heading_thirdparty = Community Packages
import_heading_firstparty = Xport Modules

[flake8]
exclude =
    build
    dist
    .eggs
ignore =
    E261 # two spaces before inline comment
    E401 # imports on same line
    D200 # One-line docstring should fit on one line with quotes
    D202 # No blank lines allowed after function docstring
    D204 # 1 blank line required after class docstring
    D301 # Use r""" if any backslashes in a docstring
    W291 # trailing whitespace
    W503 # line break before binary operator
max-line-length = 99
docstring-convention=pep257

[doc8]
ignore-path=.eggs,**/*.egg-info

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
